k8s_api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50%
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: vshvadchak/api:latest
        ports:
          - name: http
            containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /api/v1/trainees
        #     port: http
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
---
# kind: Service
# apiVersion: v1
# metadata:
#   name: api
# spec:
#   ports:
#   - name: http
#     port: 5000
#     nodePort: 30005
#     protocol: TCP
#   selector:
#      app: api
#   type: LoadBalancer
# status:
#   loadBalancer: {}
---
kind: Service
apiVersion: v1
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - port: 5000
    # Default port for image
